# 2025-zenn-hackathon

./: .gitignore  README.md  article.md
backend/: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  main.py  main.tf  requirements.txt  variables.tf
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/app/: main.py
docs/: flutter_service_worker.js  main.dart.js  manifest.json
docs/assets/: AssetManifest.bin.json  NOTICES
docs/web/: flutter_bootstrap.js  index.html  version.json
docs/web/assets/: AssetManifest.json
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  main.tf  nginx.conf  outputs.tf  pubspec.yaml  terraform.tfvars  variables.tf
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/lib/providers/: message_provider.dart  next_action_provider.dart  scrolling_provider.dart  speech_provider.dart
frontend/lib/screens/: chat_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/utils/: message_controller.dart  scrolling_controller.dart
frontend/lib/views/: chat_list_view.dart  completion_screen.dart  finish_button_view.dart  speech_screen.dart  text_field_view.dart
frontend/simple_speech_to_text/android/app/: build.gradle
frontend/simple_speech_to_text/lib/: main.dart  speech_provider.dart
frontend/simple_speech_to_text/web/: index.html
frontend/test/: widget_test.dart
frontend/web/: index.html
sample/: .gitignore  pyproject.toml
sample/src/sample/: client.py  sample.py  server.py  test_speech_to_text_mic.py  transcribe_streaming_infinite.py
(+4 files in other folders)
